# thunder_thermal_print

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
integration_test/: plugin_test.dart
ios/: thuder_thermal_print.podspec  thunder_thermal_print.podspec
ios/Classes/: BlePrinterManager.swift  BluetoothPrinterManager.swift  EscPosEncoder.swift  NetworkPrinterManager.swift  SwiftThuderThermalPrintPlugin.swift  SwiftThunderThermalPrintPlugin.swift  ThuderThermalPrintPlugin.h  ThunderThermalPrintPlugin.h  (+1 more)
lib/: thunder_thermal_print.dart  thunder_thermal_print_platform_interface.dart  thunder_thermal_print_web.dart  thunder_thermal_printer.dart  thunder_thermal_printer_method_channel.dart  thunder_thermal_printer_platform_interface.dart
lib/src/ble/: ble.dart  (+1 more)
linux/: CMakeLists.txt  thuder_thermal_print_plugin.cc  thunder_thermal_print_plugin.cc
macos/: thuder_thermal_print.podspec  thunder_thermal_print.podspec
test/: thunder_thermal_printer_method_channel_test.dart  thunder_thermal_printer_test.dart
windows/: CMakeLists.txt  thuder_thermal_print_plugin.cpp  thuder_thermal_print_plugin.h  thunder_thermal_print_plugin.cpp  thunder_thermal_print_plugin.h
windows/flutter/ephemeral/: generated_config.cmake
windows/include/thunder_thermal_print/: thunder_thermal_print_plugin_c_api.h
(+78 files in other folders)
